--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
       <div class="content">
         <h1 class="content--titulo">CHOOSE YOUR IMPRESSIVE LANDING PAGE</h1>
         <p class="content--titulo__paragrafo">for business and media</p>
-        <button class="content--button">BUY DESIGN</button>
-        <button class="content--button">GO TO PROJECTS</button>
+        <div id="content--btn">
+          <a href="#">BUY DESIGN</a>
+          <a href="#">GO TO PROJECTS</a>
+        </div>
       </div>
     </div>
   </section>
 
+  <div>
+    <img src="img/paleta.jpg" class="paleta--cores" alt="Paleta de Cores">
+  </div>
+
   <section class="container">
     <div class="portfolio--main">
       <h1 class="portfolio--main__titulo">OUR PROJECTS</h1>
-      <ul class="portfolio--main__lista">
-        <li class="portfolio--main__item">P</li>
-        <li class="portfolio--main__item">E</li>
-        <li class="portfolio--main__item">D</li>
-        <li class="portfolio--main__item">R</li>
-        <li class="portfolio--main__item">O</li>
-        <li class="portfolio--main__item">B</li>
-        <li class="portfolio--main__item">I</li>
-        <li class="portfolio--main__item">S</li>
-        <li class="portfolio--main__item">S</li>
-      </ul>
-      <button class="portfolio--main__button">SEE ALL</button>
+      <div class="portfolio--main__content">
+        <div class="portfolio--main__content--cinza"></div>
+        <div class="portfolio--main__content--medio"></div>
+        <div class="portfolio--main__content--escuro"></div>
+      </div>
+        <button class="portfolio--main__button">SEE ALL</button>
     </div>
   </section>
 
