--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
     <div class="portfolio--main">
       <h1 class="portfolio--main__titulo">OUR PROJECTS</h1>
       <div class="portfolio--main__content">
-        <div class="portfolio--main__content--cinza"></div>
-        <div class="portfolio--main__content--medio"></div>
-        <div class="portfolio--main__content--escuro"></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
+        <div class="portfolio--main__content--item"><a href="#"></a></div>
       </div>
-        <button class="portfolio--main__button">SEE ALL</button>
+      <div id="content--btn">
+        <a href="#" id="content--btn__link">SEE ALL</a>
+      </div>
     </div>
   </section>
 
@@ -57,11 +65,11 @@
 
   <section class="container">
     <div class="advantage--content">
-      <h1 class="advantage--content__titulo"></h1>
+      <h1 class="advantage--content__titulo">ADVANTAGE</h1>
       <div class="advantage--content__div">
         <p>Non dapibus arcu felis vitae eros des quas</p>
         <img src="img/icon-1.jpg" alt="Icon 1">
-        <ul>
+        <ul class="advantage--content__div--lista">
           <li>Aliquam sollicitudin turpis id ex vehicula</li>
           <li>Pretium. Ut non accumsan dolor.</li>
           <li>Duis rutrum nibh at neque pellentesque mattis. Maecenas et aliquet leo.</li>
@@ -84,12 +92,12 @@
 
   <section class="container">
     <div class="contato--content">
-      <h1>CONTACT US</h1>
+      <h1 class="contato--content__titulo">CONTACT US</h1>
       <form class="contato--content__form">
         <input type="text" placeholder="Enter your E-mail">
-        <input type="text" placeholder="Enter your Message" id="form--message">
+        <textarea placeholder="Enter your Message" id="textarea--message" cols="30" rows="10"></textarea>
+        <button class="contato--content__form--button">SEND</button>
       </form>
-      <button class="contato--content__button">SEND</button>
     </div>
   </section>
 
