--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section class="container">
     <div class="about--content">
-      <h1 class="about--content__titulo">ABOUT</h1>
+      <h1 class="about--content__titulo">ABOUT US</h1>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. The standard chunk of Lorem Ipsum reproduced dolor amet sit to be used since.</p>
     </div>
   </section>
@@ -104,6 +104,5 @@
   <footer class="footer--content">
     <p>behance.net/ivanvanin</p>
   </footer>
-
 </body>
 </html>
