Scroll-adicionado-E-detalhes-ajustados

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   
   <section class="container">
     <div class="header">      
-      <ul class="header--lista">
+      <ul class="header--lista js-menu">
         <li class="header--lista__logo"><span>L</span>OGO</li>
         <li class="header--item">
-          <p><a href="#">PORTFOLIO</a></p>
-          <p><a href="#">ABOUT US</a></p>
+          <p><a href="#portfolio">PORTFOLIO</a></p>
+          <p><a href="#about">ABOUT US</a></p>
           <p><a href="#">BUY DESIGN</a></p>
-          <p><a href="#">REFERENCES</a></p>
+          <p><a href="#advantage">REFERENCES</a></p>
       </ul>
 
       <div class="content">
@@ -36,7 +36,7 @@
     <img src="img/paleta.jpg" class="paleta--cores" alt="Paleta de Cores">
   </div>
 
-  <section class="container">
+  <section class="container" id="portfolio">
     <div class="portfolio--main">
       <h1 class="portfolio--main__titulo">OUR PROJECTS</h1>
       <div class="portfolio--main__content">
@@ -56,14 +56,14 @@
     </div>
   </section>
 
-  <section class="container">
+  <section class="container" id="about">
     <div class="about--content">
       <h1 class="about--content__titulo">ABOUT US</h1>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. The standard chunk of Lorem Ipsum reproduced dolor amet sit to be used since.</p>
     </div>
   </section>
 
-  <section class="container">
+  <section class="container" id="advantage">
     <div class="advantage--content">
       <h1 class="advantage--content__titulo">ADVANTAGE</h1>
       <div class="advantage--content__div">
@@ -104,5 +104,7 @@
   <footer class="footer--content">
     <p>behance.net/ivanvanin</p>
   </footer>
+
+  <script src="main.js"></script>
 </body>
 </html>
