Header-Responsivo-Concluido

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">      
       <ul class="header--lista js-menu">
         <li class="header--lista__logo"><span>L</span>OGO</li>
-        <li class="header--item">
+        <li class="header--lista__item">
           <p><a href="#portfolio">PORTFOLIO</a></p>
           <p><a href="#about">ABOUT US</a></p>
           <p><a href="#">BUY DESIGN</a></p>
