Alteracoes-no-SASS-Header-e-Portf

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <h1 class="contato--content__titulo">CONTACT US</h1>
       <form class="contato--content__form">
         <input type="text" placeholder="Enter your E-mail">
-        <textarea placeholder="Enter your Message" id="textarea--message" cols="30" rows="10"></textarea>
+        <textarea placeholder="Enter your Message" id="textarea--message" cols="30" rows="10" style="resize: none"></textarea>
         <button class="contato--content__form--button">SEND</button>
       </form>
     </div>
