[DESK/MOB] LP-Finalizada

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul class="advantage--content__div--lista">
           <li>Aliquam sollicitudin turpis id ex vehicula</li>
           <li>Pretium. Ut non accumsan dolor.</li>
-          <li>Duis rutrum nibh at neque pellentesque mattis. Maecenas et aliquet leo.</li>
+          <li>Duis rutrum nibh at neque pellentesque.</li>
         </ul>
       </div>
 
