mais-alguns-estilos-no-AB-FRETE-JEQUITI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Mockup</title>
 </head>
@@ -119,17 +120,20 @@
           <div class="x-shipping__container"> 
             <div class="x-shipping__code is--active js--shipping-tab">Entrega para: </div>
             <a class="link-edit" href="javascript:void(0);" id="force-shipping-fields">Alterar</a>
-            
           </div>
-              <ul class="x-shipping__body is--active">
-                <h1 class="x-shipping__body--title">Tipo de Envio</h1>
-                <h2 class="x-shipping__body--sub">Preço</h2>
-  
-                <li class="x-shipping__body--type"></li>
-                <li class="x-shipping__body--type"></li>
-  
-                <li class="x-shipping__body--price"></li>
-                <li class="x-shipping__body--price"></li>
+
+          <div class="x-shipping__body">
+            <p class="x-shipping__body--title">Tipo de Envio</p>
+            <p class="x-shipping__body--sub">Preço</p>
+          </div>
+
+              <ul class="x-shipping__info is--active">
+                <li class="x-shipping__body--type">Comum - Em até X dias uteis</li>
+                <li class="x-shipping__body--type">Expressa - Em até X dias uteis</li>
+              </ul>
+              <ul>
+                <li class="x-shipping__body--price">R$ 86,85</li>
+                <li class="x-shipping__body--price">R$ 100,00</li>
               </ul>
         </div>
       </div>
