Alteracao-no-link-do-Footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </section>
 
   <footer class="footer--content">
-    <p>behance.net/ivanvanin</p>
+    <p>github.com/pedrobissetti</p>
   </footer>
 
   <script src="main.js"></script>
